# 30-day-30-devops-projects

./: .envrc  Readme.md  devbox.json  docker-compose.yaml  userdata.sh
04__day/backend/: Dockerfile  main.py  pyproject.toml  test_integration.py
04__day/backend/ai/: __init__.py  reasoning.py
04__day/backend/api/: __init__.py
04__day/backend/api/routes/: __init__.py  health.py  investigate.py
04__day/backend/core/: config.py  logging.py  security.py
04__day/backend/kubernetes/: __init__.py  deployment_inspector.py  events_analyzer.py  kubectl_executor.py  logs_collector.py  network_inspector.py  pod_inspector.py
04__day/backend/models/: __init__.py  investigation.py
04__day/backend/services/: investigation.py
07__day/: .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
07__day/.github/workflows/: gitops-sync.yml  ml-pipeline.yml  mlops-pipeline.yml  security-scan.yml
07__day/ansible/: hosts.ini
07__day/backend/auth-service/: Dockerfile  go.mod
07__day/backend/auth-service/cmd/: main.go
07__day/backend/auth-service/internal/: db.go
07__day/backend/gateway/: Dockerfile  main.go
07__day/backend/ml-service/: Dockerfile  requirements.txt
07__day/backend/ml-service/app/: db.py  features.py  logging_config.py  main.py  models.py  s3.py
07__day/backend/resume-service/: Dockerfile  alembic.ini  requirements.txt
07__day/backend/resume-service/alembic/: env.py  script.py.mako
07__day/backend/resume-service/alembic/versions/: e45b8ad28cb5_initial.py
07__day/backend/resume-service/app/: db.py  logging_config.py  main.py  s3.py
07__day/backend/resume-worker/: Dockerfile  requirements.txt
07__day/backend/resume-worker/app/: db.py  logging_config.py  main.py
07__day/backend/resume-worker/embeddings/: generator.py
07__day/backend/resume-worker/parsers/: pdf.py
07__day/backend/resume-worker/workers/: consumer.py
07__day/docs/: architecture.md  deployment.md  local_setup.md  mlops_workflow.md  troubleshooting.md
07__day/frontend/: nginx.conf  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
07__day/frontend/src/: App.tsx  index.css  routeTree.gen.ts
07__day/frontend/src/app/: providers.tsx  router.tsx
07__day/frontend/src/components/layout/: AppShell.tsx
07__day/frontend/src/components/ui/: Button.tsx  Card.tsx  Dialog.tsx  Input.tsx  Select.tsx  Table.tsx
07__day/frontend/src/lib/: api.ts
07__day/frontend/src/routes/: __root.tsx  _authenticated.tsx  forgot-password.tsx  index.tsx  login.tsx  register.tsx
07__day/frontend/src/routes/_authenticated/: candidates.tsx  dashboard.tsx  datasets.tsx  experiments.tsx  jobs.tsx  models.tsx  monitoring.tsx  profile.tsx  resumes.tsx  settings.tsx
07__day/helm/resume-inference/: values.yaml
07__day/helm/resume-inference/templates/: inferenceservice.yaml  secrets.yaml
07__day/infra/ansible/: playbook.yml
07__day/infra/docker/garage/: garage.toml
07__day/infra/docker/garage-init/: Dockerfile  init.sh
07__day/infra/docker/mlflow/: Dockerfile
07__day/infra/docker/postgres/: init.sql
07__day/infra/helm/resume-inference/: Chart.yaml
07__day/infra/kubernetes/: autoscaling.yaml  backup-cronjobs.yaml  cert-manager.yaml  kserve-inference.yaml  network-policies.yaml  vault-agent.yaml
07__day/infra/kubernetes/argocd/: argocd-app.yaml
07__day/infra/kubernetes/monitoring/: alertmanager-config.yaml  grafana-dashboard.json  grafana-dashboards.json  prometheus-podmonitor.yaml  prometheus-rules.yaml
07__day/infra/kustomize/base/: inferenceservice.yaml
07__day/infra/kustomize/overlays/production/: patch-inferenceservice.yaml
07__day/infra/kustomize/overlays/staging/: kustomization.yaml
07__day/infra/terraform/: main.tf
07__day/kustomize/overlays/production/: kustomization.yaml  patch-inferenceservice.yaml
07__day/kustomize/overlays/staging/: patch-inferenceservice.yaml
07__day/ml/datasets/: processed.dvc
07__day/ml/datasets/processed/: .gitkeep
07__day/ml/datasets/raw/: .gitkeep
07__day/ml/datasets/training/: .gitkeep
07__day/ml/models/: best_model.pkl  best_model_meta.json
07__day/ml/pipelines/: drift_detector.py  pipeline.py  pipeline.yaml
07__day/ml/training/: config.py  data_loader.py  evaluate.py  feature_engineering.py  preprocess.py  register.py  requirements.txt  test_pipeline.py  train.py
07__day/scripts/: chaos_test.sh  export_dataset.py
07__day/terraform/: outputs.tf  variables.tf
08__day/services/: Cargo.toml
08__day/services/builder/: Cargo.toml  Dockerfile
08__day/services/builder/src/: main.rs
08__day/services/builder/src/compiler/: mod.rs
08__day/services/builder/src/config/: mod.rs
08__day/services/builder/src/git/: mod.rs
08__day/services/builder/src/handlers/: mod.rs
08__day/services/builder/src/queue/: mod.rs
08__day/services/builder/src/storage/: mod.rs
08__day/services/deployer/: Cargo.toml  Dockerfile
08__day/services/deployer/src/: main.rs
08__day/services/deployer/src/chains/: mod.rs
08__day/services/deployer/src/queue/: mod.rs
08__day/services/indexer/: Cargo.toml  Dockerfile
08__day/services/indexer/src/: main.rs
08__day/services/indexer/src/database/: mod.rs
08__day/services/indexer/src/ethereum/: mod.rs
08__day/services/indexer/src/solana/: mod.rs
08__day/services/indexer/src/websocket/: mod.rs
10__day/medical-image-classification/backend/: .dockerignore  Dockerfile  README.md  pyproject.toml
10__day/medical-image-classification/backend/app/: main.py
10__day/medical-image-classification/backend/app/explainability/: gradcam.py
10__day/medical-image-classification/backend/app/schemas/: prediction.py
10__day/medical-image-classification/backend/app/services/: predictor.py
10__day/medical-image-classification/backend/configs/: config.yaml
11__day/platform/services/media-service/: .env.example  Dockerfile  console-config.yml  docker-compose.yml  manage.py  package.json  pyproject.toml
11__day/platform/services/media-service/tests/: test_mime_validation.py  test_playback.py  (+2 more)
(+864 files in other folders)
