[project]
name = "ai-kubernetes-agent"
version = "0.1.0"
description = "AI Kubernetes Troubleshooting Agent - Backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.137.1",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.28.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["api", "core", "kubernetes", "ai", "services", "models"]
