[workspace]
resolver = "2"
members = [
    "builder",
    "deployer",
    "indexer",
]

[workspace.dependencies]
tokio = { version = "1.38", features = ["full"] }
redis = { version = "0.25", features = ["tokio-comp"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "chrono", "uuid", "bigdecimal"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.8", features = ["serde", "v4"] }
axum = "0.7"
dotenvy = "0.15"
async-trait = "0.1.80"
