[package]
name = "deployer"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true }
redis = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
axum = { workspace = true }
dotenvy = { workspace = true }
async-trait = { workspace = true }
