[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "medical-image-classification"
version = "0.1.0"
description = "Medical Image Classification and MLOps Platform"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0.3",
    "scikit-learn>=1.9.0",
    "huggingface-hub",
    "pillow",
    "tensorflow>=2.21.0",
    "pandas>=3.0.3",
    "matplotlib",
    "fastapi",
    "uvicorn",
    "python-multipart",
    "reportlab>=5.0.0",
    "mlflow",
    "boto3",
    "gunicorn",
    "opencv-python-headless",
]

[dependency-groups]
dev = ["ruff>=0.15.20"]

[tool.hatch.build.targets.wheel]
packages = ["app"]
